# pgsemantic

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-02-27-mvp-design.md  2026-02-27-mvp-implementation-plan.md
docs/superpowers/plans/: 2026-03-26-high-impact-improvements.md  2026-03-30-auto-chunking.md  2026-03-30-cross-table-search.md
docs/superpowers/specs/: 2026-03-26-high-impact-improvements-design.md  2026-03-30-top5-features-design.md
pgsemantic/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
pgsemantic/commands/: apply.py  index.py  inspect.py  integrate.py  migrate.py  retry.py  search.py  serve.py  status.py  ui.py  worker.py
pgsemantic/db/: client.py  introspect.py  queue.py  vectors.py
pgsemantic/embeddings/: __init__.py  base.py  chunker.py  local.py  ollama_provider.py  openai_provider.py
pgsemantic/mcp_server/: server.py
pgsemantic/web/: __init__.py  app.py
pgsemantic/web/static/: index.html
pgsemantic/worker/: daemon.py
tests/integration/: conftest.py  test_apply.py  test_index.py  test_search.py  test_worker.py
tests/unit/: test_chunked_search.py  test_chunker.py  test_config.py  test_embeddings.py  test_introspect.py  test_mcp_server.py  test_migrate.py  test_nl_query.py  test_queue.py  test_search_all.py  test_search_command.py  test_vectors.py  test_visualize.py  test_web_app.py
